# wuzei

./: .gitignore  Cargo.toml  HISTORY.md  Note.md  Plugin-Viewer.md  README.md  script.csx  script.rs  script_.rs  test.csx  test.md  test.py  wuzei.sln
docs/: HISTORY.md  Note.md  haiterm.md  plugin_viewer.md  snippet.js  wterm.md
huazhi/: Cargo.toml
huazhi/src/: custom_protocol.rs  event_handler.rs  lib.rs  memorymappedfile.rs  namedpipe.rs  process.rs  test.rs
nuget/: ipc.cs  ipc.csproj  nuget.sln
scripts/: Note.md  Roslyn.csx  clip.py  clip_csv.py  clip_png.py  correction.py  dataframe.py  draw.py  fn.py  hist.py  lineprofile.py  read.py  script.csx  script.py  selenium.py  stat.py  test.py  test.rs
wuzei/: Cargo.toml  build.rs
wuzei/src/: logic.rs  main.rs  wuzei.rc
wuzei/src/logic/: custom_protocol.rs  event_handler.rs  mod.rs
wuzei/src/resource/: app.js  index.html  index1.html  test - コピー.js  test.html  viewer.html
wuzei/src/resource/component/: canvas-ex.css  canvas-ex.js  context.css  context.js  haiterm.js  stalker.js  wterm.js
wuzei/src/resource/js/: lib.js  loadjs.js  snippet.js
