[package]
name = "huazhi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.34.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
windows = { version = "*", features = ["Win32_System_Console",] }
num = "*"

anyhow = "*"
thiserror = "*"
colored = "*"
indoc = "*"
include_dir = "0.7.3"

tempfile = "3.5.0"
image = "0.24.9"
tokio = { version = "1.36.0", features = ["full"] }

# mmf
winapi = { version = "*", features = [ "memoryapi", "winnt", "errhandlingapi", "namedpipeapi", "winbase", ] }

once_cell = "*"
urlencoding = "2.1.3"
