[package]
name = "huazhi"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.34.2"

anyhow = { workspace = true }
thiserror = { workspace = true }
colored = "*"
indoc = "*"
include_dir = "0.7.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { workspace = true }

windows = { version = "*", features = ["Win32_System_Console",] }
num = "*"

tempfile = "3.5.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "*"
bytes = "*"

# mmf
winapi = { version = "*", features = [ "memoryapi", "winnt", "errhandlingapi", "namedpipeapi", "winbase", ] }

once_cell = "*"
urlencoding = "2.1.3"

image = "0.24.9"      # use icon
