[package]
name = "huazhi"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.39.3"
tao = "0.27.1"

anyhow = { workspace = true }
thiserror = { workspace = true }
colored = "*"
indoc = "*"
include_dir = "0.7.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { workspace = true }
strum = { version = "0.26", features = ["derive"] }

windows = { version = "*", features = ["Win32_System_Console",] }
num = "*"

tempfile = "3.5.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "*"
bytes = "*"

clipboard-win = "5.3.1"
synoptic = "2"

# mmf
winapi = { version = "*", features = [ "memoryapi", "winnt", "errhandlingapi", "namedpipeapi", "winbase", ] }

once_cell = "*"
urlencoding = "2.1.3"

image = "0.24.9"      # use icon
