[package]
name = "wuzei"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
huazhi = { workspace = true }
hraw = { git = "https://github.com/haitusense/hraw/" }
# hraw = { path = "../../hraw" }

anyhow = { workspace = true }
thiserror = { workspace = true }
colored = "*"
indoc = "*"
include_dir = "0.7.3"

clap = { version = "4.5.1", features = ["derive",] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { workspace = true }

[target.'cfg(windows)'.build-dependencies]  
windres = "0.2.2"     # use icon
