[package]
name = "wuzei"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
huazhi = { workspace = true }
hraw = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
colored = "2.1.0"
indoc = "2.0.5"
include_dir = "0.7.3"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1.36.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { workspace = true }

pyo3 = { version = "*", features = ["auto-initialize"] }
numpy = "0.21.0"

tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "*"
bytes = "*"

[target.'cfg(windows)'.build-dependencies]  
windres = "0.2.2"     # use icon